--- a/Develop/index.html
+++ b/Develop/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-    <!-- Changed division to header -->
+    <!-- Changed div to header -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <!-- Changed div to section -->
+        <section>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,11 +25,12 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </section>
     </header>
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+        <!-- Added id to fix search-engine-optimization link in header -->
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
